# ant_gazebo_ros_model

devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/ant_model_config/: .catkin  .rosinstall  setup.sh
devel/.private/ant_model_control/: .catkin  local_setup.sh
devel/.private/ant_model_description/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/flexible_test_descr/: .catkin  local_setup.sh  setup.sh
devel/lib/ant_model_control/: ant_motion_control_node.py
devel/lib/pkgconfig/: ant_model_config.pc  ant_model_control.pc  ant_model_description.pc  catkin_tools_prebuild.pc  flexible_test_descr.pc
src/ant_walking_rl/: .gitignore
src/ant_walking_rl/ant_model_config/: CMakeLists.txt  package.xml
src/ant_walking_rl/ant_model_control/: CMakeLists.txt  package.xml
src/ant_walking_rl/ant_model_control/config/: control.yaml  joint_names_old.yaml
src/ant_walking_rl/ant_model_control/output/: gather_data.sh  measurements.csv  res.csv
src/ant_walking_rl/ant_model_control/scripts/: ant_joy_teleop_node.py  create_plots.py  csv_create.py  data_gatherer.py  teacher.py  сырые_данные_голень+лапка.csv  сырые_данные_раздельные.csv
src/ant_walking_rl/ant_model_control/src/ant_model_control/: ant_description.py  bitriangular_controller.py  geometry_primitives.py  joint_description.py  limb_description.py  robot_geometry_loader.py
src/ant_walking_rl/ant_model_description/: CMakeLists.txt
(+49 files in other folders)
