<package format="2">
  <name>ant_model_control</name>
  <version>1.0.0</version>
  <description>
    <p>Control package for and_model</p>
    <p>This package contains configuration data and controllers</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>controller_manager</depend>
  <depend>ant_model_description</depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <export>
    <architecture_independent />
  </export>
</package>
